# Apollos

./: .dockerignore  .env.example  .firebaserc  .gitignore  Apollos.md  Cargo.toml  Dockerfile  README.md  gh_run.txt
.cargo/: config.toml
.firebase/: hosting.ZnJvbnRlbmQvZGlzdA.cache
.github/workflows/: deploy.yml  rust-ci.yml
backend/: .env.example  Dockerfile  __init__.py  main.py  requirements.txt
backend/agent/: aria_agent.py  auth.py  broker_auth.py  hazard_taxonomy.py  human_fallback.py  live_bridge.py  prompts.py  run_config.py  safety_policy.py  session_manager.py  types.py  websocket_handler.py  ws_auth.py
backend/agent/tools/: __init__.py  context_manager.py  decorators.py  emotion_escalator.py  emotion_logger.py  hazard_logger.py  human_help.py  human_verify.py  location_intel.py  mode_switcher.py  runtime.py
backend/tests/: test_aria_payload_guards.py  test_auth_config.py  test_broker_auth.py  test_hazard_logger.py  test_human_fallback.py  test_live_bridge.py  test_observability_state.py  test_safety_policy.py  test_session_manager.py  test_websocket_registry.py  test_ws_token_extraction.py
crates/apollos-bench/: Cargo.toml
crates/apollos-bench/src/: main.rs
crates/apollos-core/: Cargo.toml
crates/apollos-core/src/: barcode_scan.rs  battery_gov.rs  carry_mode.rs  depth_engine.rs  ffi.rs  kinematic_gate.rs  lib.rs  optical_flow.rs  pocket_shield.rs  safety_policy.rs  sensor_fusion.rs  session.rs  spatial_audio.rs  ws_client.rs
crates/apollos-core/tests/: hazard_trace_replay.rs
crates/apollos-proto/: Cargo.toml  build.rs
crates/apollos-proto/proto/: messages.proto  types.proto
crates/apollos-proto/src/: contracts.rs  lib.rs  transport.rs
crates/apollos-server/: Cargo.toml
crates/apollos-server/src/: agent.rs  config.rs  gemini_bridge.rs  human_fallback.rs  lib.rs  main.rs  prompts.rs  safety_policy.rs  session.rs  ws_handler.rs  ws_registry.rs
crates/apollos-server/src/auth/: broker.rs  jwt.rs  mod.rs  oidc.rs  ws_auth.rs
crates/apollos-server/src/tools/: context.rs  emotion.rs  hazard.rs  human_help.rs  location.rs  mod.rs  mode.rs
crates/apollos-server/tests/: auth_and_help_flow.rs  hazard_trace_tuning.rs  native_ws_smoke.rs
docs/: ARCHITECTURE.md  Apollos_Extreme_Upgrade_Research_2026.md  Apollos_Upgrade_Guide.md  Apollos_Upgrade_Plan.md  BLUEPRINT.md  SYSTEM_PROMPT.md  TEST_MATRIX.md  Wave3_Benchmark_Report.md  rust_core_migration_status.md
docs/submission/: DEVPOST_CHECKLIST.md
frontend/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
frontend/public/models/: README.md
frontend/scripts/: copy-tflite-wasm.mjs
frontend/src/: App.tsx  styles.css
frontend/src/components/: CameraView.tsx  HazardCompass.tsx  HelperLiveView.tsx  ModeIndicator.tsx  OLEDBlackOverlay.tsx  TranscriptPanel.tsx
frontend/src/hooks/: useARIA.ts  useAudioStream.ts  useBatteryGovernor.ts  useCamera.ts  useCarryMode.ts  useLocationContext.ts  useMotionSensor.ts  usePocketMode.ts  useSensorHealth.ts  useSmartCane.ts  useWakeLock.ts
frontend/src/services/: audioCache.ts  carryMode.ts  haptics.ts  kinematicGating.ts  oidcBroker.ts  platformDetect.ts  spatialAudioEngine.ts  twilioVideo.ts
frontend/src/types/: contracts.ts
frontend/src/utils/: pcm.ts
frontend/src/workers/: depthGuard.worker.ts  deterministicScan.worker.ts  survivalReflex.worker.ts
frontend/src/worklets/: spectralVoiceGate.worklet.ts
infra/: cloud_run.tf  firestore.tf  iam.tf  main.tf  outputs.tf  variables.tf  versions.tf
native/: MODEL_RUNTIME.md  README.md
native/android/: settings.gradle.kts
native/android/app/: build.gradle.kts  proguard-rules.pro
native/android/app/src/main/: AndroidManifest.xml
native/android/app/src/main/cpp/: CMakeLists.txt  rust_bridge.cpp
native/android/app/src/main/java/com/apollos/nativeapp/: MainActivity.kt  MainScreen.kt  RealtimeSessionManager.kt  (+2 more)
native/android/app/src/main/res/values/: strings.xml
native/ios/ApollosShell/: ApollosCoreFFI.h  ApollosShellApp.swift  ContentView.swift  Info.plist  RealtimeSessionManager.swift  RustCoreBridge.swift
scripts/: benchmark_hard_stop.py  benchmark_hard_stop_asgi.py  benchmark_hard_stop_internal.py  build_native_apps.sh  build_native_core.sh  check_aec_config.py  crowd_hazard_map_dummy_e2e.py  deploy_cloudrun.sh  download_depth_model.sh  download_real_models.sh  generate_alert_ping.py  hardening_pass.py  install_native_models.sh  native_ws_smoke.sh  reflex_regression_cases.py  release_audit.sh  rotate_keys_gcp.sh  safety_regression_gate.py  test_reconnect.py  test_reconnect_asgi.py  test_reconnect_internal.py
scripts/red_team/: perception_robustness_suite.py  ws_abuse_test.py
