[workspace]
resolver = "2"
members = [
  "crates/apollos-proto",
  "crates/apollos-core",
  "crates/apollos-server",
  "crates/apollos-bench",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
authors = ["Apollos Team"]

[workspace.dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["json", "macros", "ws"] }
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", features = ["clock", "serde"] }
futures-util = "0.3"
once_cell = "1"
prost = "0.13"
prost-build = "0.13"
prost-types = "0.13"
protoc-bin-vendored = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uniffi = "0.28"
uuid = { version = "1", features = ["serde", "v4"] }
