[package]
name = "apollos-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
apollos-proto = { path = "../apollos-proto" }
anyhow = { workspace = true, optional = true }
chrono.workspace = true
futures-util = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, optional = true }
tokio-tungstenite = { workspace = true, optional = true }
tracing.workspace = true
uniffi = { workspace = true, optional = true }
uuid.workspace = true

# Phase-1 target dependencies (feature-gated until modules are fully wired).
cpal = { version = "0.15", optional = true }
hrtf = { version = "0.8", optional = true }
ort = { version = "2.0.0-rc.12", default-features = false, optional = true }

[features]
default = []
audio = ["dep:cpal", "dep:hrtf"]
ffi = ["dep:uniffi"]
ml = ["dep:ort"]
net = ["dep:anyhow", "dep:tokio", "dep:tokio-tungstenite", "dep:futures-util"]
