[package]
name = "apollos-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
apollos-proto = { path = "../apollos-proto" }
anyhow = { workspace = true, optional = true }
chrono.workspace = true
futures-util = { workspace = true, optional = true }
once_cell.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
nalgebra = "0.32"
tokio = { workspace = true, optional = true }
tokio-tungstenite = { workspace = true, optional = true }
tracing.workspace = true
uniffi = { workspace = true, optional = true }
uuid.workspace = true

# Phase-1 target dependencies (feature-gated until modules are fully wired).

[features]
default = []
ffi = ["dep:uniffi"]
net = ["dep:anyhow", "dep:tokio", "dep:tokio-tungstenite", "dep:futures-util"]
