[package]
name = "apollos-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
base64.workspace = true
prost.workspace = true
prost-types.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[build-dependencies]
prost-build.workspace = true
protoc-bin-vendored.workspace = true

[dev-dependencies]
anyhow.workspace = true
